Added few changes